--- a/app/src/main/res/layout/each_row.xml
+++ b/app/src/main/res/layout/each_row.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:orientation="vertical"
     android:padding="5dp"
     android:layout_height="wrap_content">
@@ -11,9 +11,9 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:scaleType="fitXY"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:src="@mipmap/ic_launcher"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
