--- a/app/src/main/res/layout/each_row.xml
+++ b/app/src/main/res/layout/each_row.xml
@@ -9,14 +9,33 @@
     android:layout_height="wrap_content">
 
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:scaleType="fitXY"
-        android:layout_height="150dp"
-        android:src="@mipmap/ic_launcher"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <RelativeLayout
+       android:layout_width="match_parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent"
+       android:layout_height="150dp">
+
+
+       <ImageView
+           android:id="@+id/image"
+           android:layout_width="match_parent"
+           android:scaleType="fitXY"
+           android:layout_height="150dp"
+           android:src="@mipmap/ic_launcher"
+           />
+
+       <ProgressBar
+           android:id="@+id/progress_bar1"
+           android:layout_width="30dp"
+           android:layout_height="30dp"
+           android:visibility="gone"
+           android:layout_centerInParent="true"
+           />
+
+   </RelativeLayout>
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
